--- a/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
@@ -57,7 +57,7 @@
     - **Create a peering configuration**
       - Configure private peering
       - Configure Microsoft peering
-  - Connect a virtual network to an ExpressRoute circuit
+  - **Connect a virtual network to an ExpressRoute circuit**
     - You must create the virtual network gateway by using the type **ExpressRoute** and not **VPN**.
     - ![](2019-11-07-22-42-04.png)
   - High availability and failover with ExpressRoute
