--- a/AZ-300-Prep/Architect network infrastructure in Azure/2. Network security groups.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/2. Network security groups.md
@@ -1,4 +1,5 @@
 ## [Secure and isolate access to Azure resources by using network security groups and service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/index)
+- revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/1-introduction)
 - [Use network security groups to control network access](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/2-network-security-groups)
   - Network security groups
@@ -6,7 +7,9 @@
     - Network security groups contain **security rules** that you configure to allow or deny inbound and outbound traffic. 
     - You can use network security groups to filter traffic between virtual machines or subnets, both within a virtual network and from the internet.
   - Network security group assignment and evaluation
-    - Network security groups are assigned to a **network** interface or a **subnet**. 
+    - Network security groups are assigned to 
+      - a **network** interface or a **subnet**. 
+      - **VMs**
     - When you assign a network security group to a subnet, the rules apply to **all network interfaces** in that subnet. 
     - Each network security group is evaluated independently.
       - Inbound traffic is 
@@ -52,7 +55,6 @@
       - **application security groups**
         - ASGs are a way to define your own groups of resources So that they cane be used in the Source or destinations of the rules
         - An application security group allows you to group network interfaces together. You can then use that application security group as a source or destination rule within a network security group.
-        - 
 
 - [Exercise - Create and manage network security groups](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/3-exercise-network-security-groups)
   - Create a virtual network and network security group
@@ -170,8 +172,8 @@
 - [Secure network access to PaaS services with virtual network service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/4-vnet-service-endpoints)
   - **Virtual network service endpoints**
     - ![](2019-11-08-11-22-20.png)
-    - Use virtual network service endpoints to extend your private address space in Azure by providing a direct connection to your Azure services. Service endpoints let you secure your Azure resources to only your virtual network. Service traffic will remain on the Azure backbone, and doesn't go out to the internet.
-    - Service endpoints can connect certain PaaS Services directly to your private address space in Azure, so they act like they’re on the same virtual network. You use your private address space to access the PaaS services directly. Adding service endpoints doesn't remove the public endpoint.
+    - Use virtual network **service endpoints** to **extend your private address space** in Azure by providing a **direct connection** to your Azure services. Service endpoints let you secure your Azure resources to **only your virtual network**. Service traffic will remain on the Azure backbone, and doesn't go out to the internet.
+    - **Service endpoints** can connect certain PaaS Services directly to your private address space in Azure, so they act like they’re on the same virtual network. You use your private address space to access the PaaS services directly. **Adding service endpoints doesn't remove the public endpoint.**
     - This feature is available for the following Azure services and regions, and you will also find the Microsoft.* resource in parenthesis that needs to be enabled from the Subnet side while configuring service endpoints for your service :
       - Azure Storage (Microsoft.Storage)
       * Azure SQL Database (Microsoft.Sql)
