master: vnet peering

--- a/AZ-300-Prep/Architect network infrastructure in Azure/3. Virtual network peering.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/3. Virtual network peering.md
@@ -1,4 +1,5 @@
 ## [Distribute your services across Azure virtual networks and integrate them by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/index)
+- revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/1-introduction)
 - [Connect services by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/2-connect-services-using-vnet-peering)
   - You can use virtual network peering to directly connect Azure virtual networks. When you use peering to connect virtual networks, virtual machines (VMs) in these networks can communicate with each other as if they were in the same network.
@@ -9,12 +10,13 @@
     - **Global virtual network peering** connects virtual networks that are in different Azure regions, such as a virtual network in North Europe and a virtual network in West Europe.
   - **Properties**
     - **Reciprocal connections**
-      - To connect the networks by using virtual network peering, you have to create connections in each virtual network.
+      - To connect the networks by using virtual network peering, you have to **create connections in each** virtual network.
     - **Cross-subscription virtual network peering**
       - Virtual networks can be in different subscriptions, and the subscriptions can use the same or different Azure Active Directory tenants.
     - **No Transitivity**
       - Virtual network peering is nontransitive. Only virtual networks that are directly peered can communicate with each other. **The virtual networks can't communicate with the peers of their peers**.
     - **Gateway transit**
+      - You can configure **transitive** connections on-premises if you use virtual network gateways as **transit points**.
       - By using gateway peering, you can configure a single virtual network as a hub network. Connect this hub network to your on-premises datacenter and share its virtual network gateway with peers.
       - Using gateway transit, you can enable on-premises connectivity without deploying virtual network gateways to all your virtual networks.
       - **How to configure**
@@ -35,12 +37,12 @@
   - Create virtual network peering connections
     - create peering from SalesVnet to MarketingVnet
         ```
-        az network vnet peering create \
-                --name SalesVNet-To-MarketingVNet \
-                --remote-vnet MarketingVNet \
-                --resource-group [sandbox resource group name] \
-                --vnet-name SalesVNet \
-                --allow-vnet-access
+            az network vnet peering create \
+            --name SalesVNet-To-MarketingVNet \
+            --remote-vnet MarketingVNet \
+            --resource-group [sandbox resource group name] \
+            --vnet-name SalesVNet \
+            --allow-vnet-access
         ```
     - create peering from MarketingVnet to SalesVnet
         ``` 
