master: Azure traffic manager

--- a/AZ-300-Prep/Architect network infrastructure in Azure/4 .Azure Traffic Manager.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/4 .Azure Traffic Manager.md
@@ -1,4 +1,5 @@
 ## [Enhance your service availability and data locality by using Azure Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/index)
+  - revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/1-introduction)
 
 - [Route network traffic by using Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/2-priority-routing)
@@ -65,6 +66,9 @@
     ```
 - [Optimize applications across regions by using performance routing](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/4-performance-routing)
   - Performance routing
+    - [Official document](https://docs.microsoft.com/en-au/azure/traffic-manager/traffic-manager-routing-methods#performance)
     - Azure stores historical DNS query latency for connecting clients in an internet latency table. Azure can use this information to direct traffic to the fastest responding server, which is the server with the lowest latency. 
+    - Traffic Manager maintains the internet latency table by tracking the roundtrip time between IP address ranges and each Azure datacenter.
+    - Traffic Manager **looks up the source IP address** of the **incoming DNS request** in the **Internet Latency Table**. Traffic Manager then chooses an **available endpoint** in the **Azure datacenter** that has the **lowest latency** for that IP address range, and returns that endpoint in the DNS response.
 - [Exercise - Optimize applications across regions by using performance routing](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/5-exercise-performance-routing)
 - [Summary](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/6-summary)
