--- a/AZ-300-Prep/Architect network infrastructure in Azure/5 .Azure Load Balancer.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/5 .Azure Load Balancer.md
@@ -1,4 +1,5 @@
 ## [Improve application scalability and resiliency by using Azure Load Balancer](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/index)
+- revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/1-introduction)
 - [Azure Load Balancer features and capabilities](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/2-load-balancer-features)
   - Distribute traffic with Azure Load Balancer
@@ -63,7 +64,7 @@
       - Hash
         - Source IP
         - Desti IP
-      - This distribution mode is also known as **session affinity** or c**lient IP affinity**
+      - This distribution mode is also known as **session affinity** or **client IP affinity**
       - the mode uses a two-tuple hash (from the source IP address and destination IP address) or three-tuple hash (from the source IP address, destination IP address, and protocol type)
       - The hash ensures that requests from a specific client are always sent to the same virtual machine behind the load balancer.
   - Choose a distribution mode
