master: application gateway

--- a/AZ-300-Prep/Architect network infrastructure in Azure/6 .Application Gateway.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/6 .Application Gateway.md
@@ -1,4 +1,5 @@
 ## [Load balance your web service traffic with Application Gateway](https://docs.microsoft.com/en-au/learn/modules/load-balance-web-traffic-with-application-gateway/index)
+- revisited 2020 May
 OneNote Link
 
     ```
@@ -44,7 +45,7 @@ OneNote Link
         - Listener is the only component that is not in Load balancer
         - Because in load balancer rule is mapping from a port to the backend pool, and in gateway there are more ways to do it, using port, path, protocal, I guess that's why this is introduced to the gateway. So that those settings are a standalong component as "listener". And the rule will have less stuff in it. 
     - **Routing rules**
-      - A routing rule binds **hostname and path elements** to the **back-end pools **
+      - A routing rule binds **hostname and path elements** to the **back-end pools**
       - A routing rule also has an associated set of HTTP settings including
         - Http or Https
         - Session stickiness
