master: routing & NVA

--- a/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/1. ExpressRoute.md
@@ -1,5 +1,5 @@
 ## [Connect your on-premises network to the Microsoft global network by using ExpressRoute](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/index)
-- revisited 2020 May
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/1-introduction)
   
 - [What is the Azure ExpressRoute service?](https://docs.microsoft.com/en-au/learn/modules/connect-on-premises-network-with-expressroute/2-expressroute-service)
