--- a/AZ-300-Prep/Architect network infrastructure in Azure/2. Network security groups.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/2. Network security groups.md
@@ -1,5 +1,5 @@
 ## [Secure and isolate access to Azure resources by using network security groups and service endpoints](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/index)
-- revisited 2020 May
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/1-introduction)
 - [Use network security groups to control network access](https://docs.microsoft.com/en-au/learn/modules/secure-and-isolate-with-nsg-and-service-endpoints/2-network-security-groups)
   - Network security groups
