--- a/AZ-300-Prep/Architect network infrastructure in Azure/3. Virtual network peering.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/3. Virtual network peering.md
@@ -1,5 +1,5 @@
 ## [Distribute your services across Azure virtual networks and integrate them by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/index)
-- revisited 2020 May
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/1-introduction)
 - [Connect services by using virtual network peering](https://docs.microsoft.com/en-au/learn/modules/integrate-vnets-with-vnet-peering/2-connect-services-using-vnet-peering)
   - You can use virtual network peering to directly connect Azure virtual networks. When you use peering to connect virtual networks, virtual machines (VMs) in these networks can communicate with each other as if they were in the same network.
