--- a/AZ-300-Prep/Architect network infrastructure in Azure/4 .Azure Traffic Manager.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/4 .Azure Traffic Manager.md
@@ -1,5 +1,5 @@
 ## [Enhance your service availability and data locality by using Azure Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/index)
-  - revisited 2020 May
+  - Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/1-introduction)
 
 - [Route network traffic by using Traffic Manager](https://docs.microsoft.com/en-au/learn/modules/distribute-load-with-traffic-manager/2-priority-routing)
