--- a/AZ-300-Prep/Architect network infrastructure in Azure/5 .Azure Load Balancer.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/5 .Azure Load Balancer.md
@@ -1,5 +1,5 @@
 ## [Improve application scalability and resiliency by using Azure Load Balancer](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/index)
-- revisited 2020 May
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/1-introduction)
 - [Azure Load Balancer features and capabilities](https://docs.microsoft.com/en-au/learn/modules/improve-app-scalability-resiliency-with-load-balancer/2-load-balancer-features)
   - Distribute traffic with Azure Load Balancer
