--- a/AZ-300-Prep/Architect network infrastructure in Azure/6 .Application Gateway.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/6 .Application Gateway.md
@@ -1,5 +1,5 @@
 ## [Load balance your web service traffic with Application Gateway](https://docs.microsoft.com/en-au/learn/modules/load-balance-web-traffic-with-application-gateway/index)
-- revisited 2020 May
+- Revisited 2020 May
 OneNote Link
 
     ```
