--- a/AZ-300-Prep/Architect network infrastructure in Azure/7 .Routing in Azure.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/7 .Routing in Azure.md
@@ -1,4 +1,5 @@
 ## [Manage and control traffic flow in your Azure deployment with routes](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/index)
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/1-introduction)
 - [Identify routing capabilities of an Azure virtual network](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/2-azure-virtual-network-route)
   - Azure routing
@@ -35,6 +36,7 @@
     - Virtual network service endpoint
       - Your Azure virtual machines can access your storage account directly from the private address space and deny access from a public virtual machine. As you enable service endpoints, Azure creates routes in the route table to direct this traffic.
   - Custom routes
+    - You have two options for implementing custom routes: create a user-defined route or use Border Gateway Protocol (BGP) to exchange routes between Azure and on-premises networks.
     - **User-defined routes**
       - You use a user-defined route to override the default system routes so that traffic can be routed through firewalls or NVAs.
       - For example, you might have a network with two subnets and want to add a virtual machine in the perimeter network to be used as a firewall. You create a user-defined route so that traffic passes through the firewall and doesn't go directly between the subnets.
@@ -49,8 +51,8 @@
       - A network gateway in your on-premises network can exchange routes with a virtual network gateway in Azure by using BGP. BGP is the standard routing protocol that is normally used to exchange routing and information among two or more networks.
       - BGP offers **network stability** because routers can quickly change connections to send packets if a connection path goes down.
       - You typically use BGP to 
-        - advertise on-premises routes to Azure when you're connected to an Azure datacenter through Azure **ExpressRoute**. 
-        - configure BGP if you connect to an Azure virtual network by using a **VPN site-to-site connection**.
+        - **advertise** on-premises routes to Azure when you're connected to an Azure datacenter through Azure **ExpressRoute**. 
+        - **configure** BGP if you connect to an Azure virtual network by using a **VPN site-to-site connection**.
   - Route selection and priority
     - If multiple routes are available in a route table, Azure uses the route with the **longest prefix match** because it's more **specific**.
       - 10.0.0.0/16 and 10.0.0.0/24 prefixes, Azure selects the route with the 10.0.0.0/24 prefix
@@ -94,7 +96,7 @@
       ```
 
 - [What is an NVA?](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/4-network-virtual-appliances)
-  - A network virtual appliance (NVA) is a virtual appliance that consists of various layers like:
+  - A **network virtual appliance (NVA)** is a virtual appliance that consists of various layers like:
     - a firewall
     - a WAN optimizer
     - application-delivery controllers
@@ -103,19 +105,23 @@
     - IDS/IPS
     - proxies
   - You can deploy NVAs chosen from **providers** in **Azure** **Marketplace**. Such providers include Check Point, Barracuda, Sophos, WatchGuard, and SonicWall. You can use an NVA to filter traffic inbound to a virtual network, to block malicious requests, and to block requests made from unexpected resources.
-  - Network virtual appliance
+  - **Network virtual appliance**
     - Network virtual appliances or NVAs are **virtual machines** that control the flow of **network traffic** by **controlling routing**. 
     - You typically use them to manage traffic flowing from a perimeter-network environment **to other networks or subnets**.
     - ![](2019-11-10-10-20-56.png)
-  - microsegmentation 
-    - With the microsegmentation approach, you can create dedicated subnets for the firewall and then deploy web applications and other services in other subnets. All traffic is routed through the firewall and inspected by the NVAs. You enable forwarding on the virtual-appliance network interfaces to pass traffic that is accepted by the appropriate subnet.
-    - Microsegmentation lets the firewall inspect all packets at OSI Layer 4 and, for application-aware appliances, Layer 7. When you deploy an NVA to Azure, it acts as a router that forwards requests between subnets on the virtual network.
+  - **Microsegmentation** 
+    - With the microsegmentation approach, you can create **dedicated subnets** for the firewall and then deploy web applications and other services in other subnets. 
+    - All traffic is routed through the firewall and inspected by the NVAs. 
+    - You **enable IP forwarding** on the **virtual-appliance network interfaces** to pass traffic that is accepted by the appropriate subnet.
+    - **Microsegmentation** lets the firewall inspect all packets at OSI Layer 4 and, for application-aware appliances, Layer 7. When you deploy an NVA to Azure, it acts as a router that forwards requests between subnets on the virtual network.
   - Check your knowledge
     - ![](2019-11-10-10-22-25.png)
 - [Exercise - Create an NVA and virtual machines](https://docs.microsoft.com/en-au/learn/modules/control-network-traffic-flow-with-routes/5-exercise-create-nva-vm)
   - ![](2019-11-10-10-30-27.png)
   - Create a VM
-  - Enable IP forwarding for the Azure network interface
+  - Enable **IP forwarding** for the Azure network interface
+    - You'll configure the appliance to forward IP traffic. 
+    - If IP forwarding isn't enabled, traffic that is routed through your appliance will never be received by its intended destination servers.
     ```bash
     az network nic update --name $NICNAME \
       --resource-group [sandbox resource group name] \
