master: up addressing

--- a/AZ-300-Prep/Architect network infrastructure in Azure/8 .Design an IP addressing schema.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/8 .Design an IP addressing schema.md
@@ -1,4 +1,5 @@
 ## [Design an IP addressing schema for your Azure deployment](https://docs.microsoft.com/en-au/learn/modules/design-ip-addressing-for-azure/index)
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/design-ip-addressing-for-azure/1-introduction)
 - [Network IP addressing and integration](https://docs.microsoft.com/en-au/learn/modules/design-ip-addressing-for-azure/2-network-ip-addressing-integration)
   - There are three ranges of non-routable IP addresses specifically designed for internal networks that will not be sent over internet routers. These are the following:
@@ -18,7 +19,6 @@
       - **Private IP addresses**
         - **Dynamic private IP addresses** are assigned through a DHCP lease and can change over the lifespan of the Azure resource.
         - **Static public IP addresses** are assigned through a DHCP reservation, and do not change through the lifespan of the Azure resource. They will persist if a resource is stopped or deallocated.
-
   - **Basic** and **Standard** SKU
     - **Basic** public IPs can be assigned with the **static** or **dynamic** allocation method. 
     - **Standard** SKU public IP addresses always use **static** allocation method.
@@ -26,8 +26,10 @@
     - Can be used to **ensure a static range** of public IP addresses
     - Because
       - You **cannot** bring your own public IP addresses **from on-premises** networks into Azure. 
-      - Public IP addresses **cannot** be **moved between regions**, all addresses are region-specific.
-    - Cannot specify the addresses at time of creation, but after creation the addresses will be fixed. The IP addresses will be a contiguous range. The advantage of a public IP address prefix is that you can specify firewall rules for these IP addresses with the knowledge that they will not change. You can assign the addresses from a public IP address prefix to any resource in Azure that supports public IP addresses.
+      - Public IP addresses **cannot** be **moved between regions**, all addresses are **region-specific**.
+    - Cannot specify the addresses at time of creation, but after creation the addresses will be fixed. The IP addresses will be a contiguous range. 
+    - The advantage of a public IP address prefix is that you can specify firewall rules for these IP addresses with the knowledge that they will not change. 
+    - You can assign the addresses from a public IP address prefix to any resource in Azure that supports public IP addresses.
   - IP addressing for Azure virtual networks
     -  You choose the private IP addresses reserved by Internet Assigned Numbers Authority (IANA) based on your network requirements:
        -  10.0.0.0/8
