--- a/AZ-300-Prep/Architect network infrastructure in Azure/9 .Hub and spoke.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/9 .Hub and spoke.md
@@ -1,4 +1,5 @@
 ## [Centralize your core services by using hub and spoke Azure virtual network architecture](https://docs.microsoft.com/en-au/learn/modules/hub-and-spoke-network-architecture/index)
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/hub-and-spoke-network-architecture/1-introduction)
 - [Implement a hub-spoke network topology on Azure](https://docs.microsoft.com/en-au/learn/modules/hub-and-spoke-network-architecture/2-implement-hub-spoke)
   - Hub and spoke architecture foundations
@@ -15,10 +16,10 @@
     - The **spokes** are virtual networks that host workloads, and connect to the central hub through virtual network peering.
 - [Plan virtual networks on Azure](https://docs.microsoft.com/en-au/learn/modules/hub-and-spoke-network-architecture/3-plan-virtual-networks)
   - Connect your on-premises network
-    - A VPN gateway sends encrypted traffic between the two networks over the internet. 
+    - A **VPN gateway** sends encrypted traffic between the two networks over the internet. 
       - Gateways support multiple connections that route the VPN tunnels through the available bandwidth, although a virtual network can only have one gateway assigned. 
       - You can also use a VPN gateway for network-to-network connections in Azure.
-  - Use ExpressRoute in a hub-spoke topology
+  - Use **ExpressRoute** in a hub-spoke topology
     - here are limits to the number of virtual networks per ExpressRoute circuit. 
       - For the standard tier, the limit is currently 10 networks. 
       - If you use the premium add-on, the limit is increased based on the circuit size. The lowest number is 20 virtual networks on a 50-Mbps circuit, up to 100 for circuits that are 10-Gbps or bigger.
@@ -30,12 +31,12 @@
 - [Secure your hub and spoke network](https://docs.microsoft.com/en-au/learn/modules/hub-and-spoke-network-architecture/5-secure-hub-spoke)
   - Secure network design on Azure
     - There are several features to consider as part of securing a network design:
-      - Azure Virtual Network: Provides a base layer of security by logically isolating your environments in Azure, to prevent unauthorized or unwanted access.
-      - Azure DNS: A hosting service for your domain names. Azure DNS is a secure service that manages and resolves domain names in your virtual network.
-      - Azure Application Gateway: A dedicated virtual appliance that provides an application delivery controller as a service, including a web application firewall (WAF).
-      - Azure Traffic Manager: A service to control the distribution of user traffic in Azure.
-      - Azure Load Balancer: Provides high availability and network performance to your Azure applications.
-      - Perimeter network: Segments assets between your Azure virtual network and the internet.
+      - **Azure Virtual Network**: Provides a base layer of security by logically isolating your environments in Azure, to prevent unauthorized or unwanted access.
+      - **Azure DNS**: A hosting service for your domain names. Azure DNS is a secure service that manages and resolves domain names in your virtual network.
+      - **Azure Application Gateway**: A dedicated virtual appliance that provides an application delivery controller as a service, including a web application firewall (WAF).
+      - **Azure Traffic Manager**: A service to control the distribution of user traffic in Azure.
+      - **Azure Load Balancer**: Provides high availability and network performance to your Azure applications.
+      - **Perimeter network**: Segments assets between your Azure virtual network and the internet.
 
   - Base components of Azure security for hub-spoke topologies
     - **Network security group**
@@ -44,15 +45,15 @@
       - Configure a perimeter network in its own subnet in the hub virtual network for routing external traffic. The perimeter network is designed to host network virtual appliances to provide security functionality, such as firewalls and packet inspection. You can route the outbound traffic from the perimeter network through virtual appliances, so the traffic is monitored, secured, and audited.
     - **Network virtual appliance**
       - Network virtual appliances (NVAs) provide a secure network boundary by checking all inbound and outbound network traffic. Then the NVA passes only the traffic that meets network security rules, essentially acting as a firewall.
-      - Azure Firewall can replace some components discussed in this article, to control access to Azure network resources. For more details, see the following section, "Azure Firewall."
+      - Azure Firewall can replace some components discussed in this article, to control access to Azure network resources.
     - **Azure ExpressRoute**
       - ExpressRoute creates a dedicated private WAN link between on-premises resources and an Azure gateway subnet in the hub virtual network. You add a network security appliance between the on-premises network and the ExpressRoute provider edge routers. This restricts the flow of unauthorized traffic from the virtual network.
-  - Azure Firewall
+  - **Azure Firewall**
     - Microsoft **manages** this network security service. It protects Azure virtual networks and their resources by letting you manage and enforce connectivity policies centrally. 
     - Azure Firewall enables central control of all network communications through policy enforcement. 
     - Azure Firewall is typically provisioned in the hub for complete control of traffic through the network.
     - ![](2019-11-10-12-51-27.png)
-  - Network security groups (NSGs)
+  - **Network security groups (NSGs)**
     - Network security groups (NSGs) enforce and control network traffic rules. 
     - NSGs are rules-based, and evaluate rules by priority. 
     - NSGs determine priority by using **source, source port, destination, destination port, and protocol**, to either allow or deny traffic.
