master: network monitroring

--- a/AZ-300-Prep/Architect network infrastructure in Azure/10 .Network monitoring.md
+++ b/AZ-300-Prep/Architect network infrastructure in Azure/10 .Network monitoring.md
@@ -1,11 +1,13 @@
 ## [Monitor and troubleshoot your end-to-end Azure network infrastructure by using network monitoring tools](https://docs.microsoft.com/en-au/learn/modules/troubleshoot-azure-network-infrastructure/index)
+- Revisited 2020 May
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/troubleshoot-azure-network-infrastructure/1-introduction)
 - [Troubleshoot a network by using Network Watcher monitoring and diagnostic tools](https://docs.microsoft.com/en-au/learn/modules/troubleshoot-azure-network-infrastructure/2-troubleshoot-networking-with-network-watcher)
-  - What is Network Watcher?
+  - **What is Network Watcher?**
     - Network Watcher is an Azure service that combines tools in a central place to diagnose the health of Azure networks. The Network Watcher tools are divided into two categories:
       - **Monitoring tools**
       - **Diagnostic tools**
-  - Network Watcher monitoring tools
+  - **Network Watcher monitoring tools**
+    - Network Watchers provides three monitoring tools:
     - **Topology**
       - The topology tool generates **a graphical display** of your Azure virtual network, its resources, its interconnections, and their relationships with each other.
       - You can use the topology tool to **visualize** and understand the infrastructure you're dealing with before you start troubleshooting.
@@ -22,7 +24,7 @@
         - Between virtual networks.
         - For your connections between on-premises and the cloud.
         - For Azure ExpressRoute circuits.
-  - Network Watcher diagnostic tools
+  - **Network Watcher diagnostic tools**
     - **IP flow verify**
       - The IP flow verify tool tells you if packets are allowed or denied for a specific virtual machine. If a network security group denies a packet, the tool tells you the name of that group so that you can fix the problem.
       - If a network security group denies a packet, the tool tells you the name of that group so that you can fix the problem.
@@ -34,7 +36,7 @@
       - The security group view tool in Network Watcher displays all the effective NSG rules applied to a network interface.
     - **Packet capture**
       - You use the packet capture tool to record all of the packets sent to and from a VM. You'll then review the captured to gather statistics about network traffic or diagnose anomalies, such as unexpected network traffic on a private virtual network.
-      - The packet capture tool is a virtual machine extension that is remotely started through Network Watcher and happens automatically when you start a packet capture session.
+      - The packet capture tool is a **virtual machine extension** that is remotely started through Network Watcher and happens automatically when you start a packet capture session.
     - **Connection troubleshoot**
       - You use the connection troubleshoot tool to check TCP connectivity between a source and destination VM. You can specify the destination VM by using an FQDN, a URI, or an IP address.
       - If the connection is unsuccessful, you'll see details of the fault. Fault types include:
