master: design your migration

--- a/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/1 .Design your migration.md
+++ b/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/1 .Design your migration.md
@@ -46,12 +46,12 @@
   - **Monitor**
     - Azure Monitor
       - Azure Monitor can capture health and performance information from Azure VMs if you install a Log Analytics agent. You can install the agent on machines running either Windows or Linux, and you can then set up alerting and reporting.
-    - AzureSentinel
+    - Azure Sentinel
       - Azure Sentinel provides security information and event-management (SIEM) capabilities, along with artificial intelligence to help you protect against, detect, and respond to security events. This information helps security operations (SecOps) teams triage critical alerts and prioritize work effectively.
   - ![](2019-11-19-23-29-34.png)
 - [Assess your environment with Azure Migrate](https://docs.microsoft.com/en-au/learn/modules/design-your-migration-to-azure/3-assess-your-environment/)
-  - Azure Migrate helps you **assess your current on-premises workloads**. After the assessment, Azure Migrate makes **recommendations for the size of VM** you'll need to provision.
-  - Azure Migrate
+  - **Azure Migrate** helps you **assess your current on-premises workloads**. After the assessment, Azure Migrate makes **recommendations for the size of VM** you'll need to provision.
+  - **Azure Migrate**
     - Free
     - assesses on-premises VMware virtual machines for running in Azure. 
     - performance-based sizing calculations (virtual machine sizing, compute/storage)
@@ -61,9 +61,9 @@
       - the assessments it produces are created within a **project**. Each project has a collector appliance that discovers up to **1,500 VMs**.
   - Work with Azure Migrate
     - ![](2019-11-19-23-44-18.png)
-    1. The Azure portal guides you through downloading a collector appliance, which carries out the discovery of VMs in your environment.
-    2. Import and spin up the collector appliance, and then complete its configuration to connect it to the **Azure Migrate project**.
-    3. The collector uses VMware PowerCLI cmdlets to do agentless data collection on your VMware estate.
+    1. The Azure portal guides you through downloading a **collector appliance**, which carries out the discovery of VMs in your environment.
+    2. **Import and spin up** the collector appliance, and then complete its configuration to connect it to the **Azure Migrate project**.
+    3. The collector uses VMware PowerCLI cmdlets to do agentless **data collection** on your VMware estate.
          - VM cores, memory, disk sizes, and network adapters
          - performance data like CPU and memory usage, disk IOPS, disk throughput, and network output.
          - To receive and store the collected data, Azure Migrate requires that you open port 443 between your internal network and Azure for
@@ -74,7 +74,7 @@
     6. Create assessment in Azure portal    
   - ![](2019-11-19-23-50-17.png)
 - [Migrate servers with Azure Site Recovery](https://docs.microsoft.com/en-au/learn/modules/design-your-migration-to-azure/4-migrate-servers/)
-  -  Azure Site Recovery is a service that can be used for disaster recovery for on-premises and Azure virtual machines, but can also be used to migrate virtual machines into Azure.
+  -  **Azure Site Recovery** is a service that can be used for disaster recovery for on-premises and Azure virtual machines, but can also be used to migrate virtual machines into Azure.
   -  The failover could be an on-premises-to-Azure failover, or a failover from one Azure region to another.
   -  **Preparation and prerequisites**
      -  **Account permissions**: Your Azure account must be either be the administrator account or an account with the permissions to do all of the following:
@@ -113,8 +113,11 @@
       - Adding a backup schedule that uses Azure Backup.
       - Replicating the machines to a secondary region.
   - ![](2019-11-20-00-17-05.png)
+    - Physical Unix servers are not supported by Azure Site Recovery.
 - [Migrate databases with Azure Database Migration Service](https://docs.microsoft.com/en-au/learn/modules/design-your-migration-to-azure/5-migrate-databases/)
-  - Azure Database Migration Service enables online and offline migrations from multiple database sources to Azure data platforms, all with minimal downtime. The service uses the Microsoft Data Migration Assistant to generate assessment reports. Identified tasks are then performed by the Database Migration Service.
+  - **Azure Database Migration Service** enables online and offline migrations from multiple database sources to Azure data platforms, all with minimal downtime. 
+    - The service uses the **Microsoft Data Migration Assistant** to generate assessment reports. 
+    - Identified tasks are then performed by the **Database Migration Service**.
   - Offline vs. online migration
     - An offline migration requires shutting down the server at the start of the migration, which means downtime for the service. 
     - An online migration uses a continuous synchronization of live data, allowing a cutover to the Azure replica database at any time. The online option is the better of the two if you need to minimize downtime for your workload.
@@ -124,7 +127,9 @@
   - Your relational database can be migrated to a number of different destinations in Azure: 
     - **Single Azure SQL Database instance**
     - **Azure SQL Database managed instance**
+      - 100% compatible with SQL Server Enterprise Edition Database Engine, but missing some minor SQL Server features.
     - **SQL Server on Azure Virtual Machines**
+      - An infrastructure-as-a-service (IaaS) offering that runs a full version of SQL Server and supports all the features of SQL Server.
     - **Azure Database for MySQL**
     - **Azure Database for PostgresSQL**
     - **Azure Cosmos DB**
@@ -139,15 +144,15 @@
         - Add **CONTROL DATABASE** permissions to the credentials used to connect to the target Azure SQL Database instance.
       - **Provision your target database in Azure**: Create the database that is to be the target of the migration. Size it appropriately for the migrated workload.
     - Assess the on-premises databases
-      - Using the Data Migration Assistant, create an **Assessment** project, give the project a name, and select the source and target servers. 
+      - Using the **Data Migration Assistant**, create an **Assessment** project, give the project a name, and select the source and target servers. 
       - The assessment will generate a **report** on completion, including a set of recommendations and alternative approaches that could be taken for the migration.
-    - Migrate the schema by using the Data Migration Assistant
+    - Migrate the schema by using the **Data Migration Assistant**
       - To use the Data Migration Assistant to **migrate** the schema, create a new Migration project. 
       - Select your on-premises SQL Server instance as the source server, and your Azure SQL Database instance as the target server. Set the scope of the migration to **Schema Only**. 
       - After you connect to the source database, choose the schema objects to deploy to the new SQL database. The Data Migration Assistant will create a script to take the required actions. Then, select **Deploy Schema** to run the script. When the script is complete, check the target server to make sure the database has been configured correctly.
       - ![](2019-11-20-20-45-26.png)
-    - Migrate your data with Database Migration Service
-      - Create an instance of Azure Database Migration Service. Choose the pricing tier based on whether you need an online or offline migration.
+    - Migrate your data with **Database Migration Service**
+      - Create an instance of **Azure Database Migration Service**. Choose the pricing tier based on whether you need an online or offline migration.
       - Create a new migration project. Choose the type of migration you want to perform, either offline or online.
       - Specify source and target server details, including the authentication information.
       - Identify the databases. Map the relevant target database on the target server to the source server.
