master: Protect on-premiseswith Azure Site Recovery

--- a/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/2 .Protect on-premises with Azure Site Recovery.md
+++ b/AZ-300-Prep/Architect migration, business continuity, and disaster recovery in Azure/2 .Protect on-premises with Azure Site Recovery.md
@@ -2,7 +2,7 @@
 - [Introduction](https://docs.microsoft.com/en-au/learn/modules/protect-on-premises-infrastructure-with-azure-site-recovery/1-introduction/)
 - [Azure Site Recovery overview](https://docs.microsoft.com/en-au/learn/modules/protect-on-premises-infrastructure-with-azure-site-recovery/2-azure-site-recovery-overview/)
   - Business continuity and disaster recovery
-    - As part of your BCDR plan, identify the recovery time objectives (RTOs) and recovery point objectives (RPOs) for your applications. Both objectives help to realize the maximum tolerable hours that your business can be without specified services, and what the data recovery process should be. Let's look closer at each one.
+    - As part of your BCDR plan, identify the **recovery time objectives (RTOs)** and **recovery point objectives (RPOs)** for your applications. Both objectives help to realize the maximum tolerable hours that your business can be without specified services, and what the data recovery process should be. Let's look closer at each one.
     - ![](2019-11-20-21-02-20.png)
     - **Recovery time objective**
       - A recovery time objective is a measure of the **maximum amount of time your business can survive** after a disaster before normal service is restored. Let's assume your RTO is 12 hours, which means that operations can continue for 12 hours without the business's core services functioning. If the downtime is 24 hours, your business would be seriously harmed.
@@ -49,10 +49,16 @@
         - The automated ability to simplify the reservation of IP addresses, configure load balancers, and integrate with Azure Traffic Manager.
       - **Automation library**
         -  Production-ready scripts that can be downloaded and integrated with the recovery plan to provide a fully automated recovery, if needed.
+    - **IIS**
+      -  Protecting IIS allows for full automation of the recovery plan if you need to fail over to the replicated environment. 
+      -  Protection for IIS servers can be easily enabled, and **IP addressing** can be properly configured by mapping the primary and recovery networks prior to fail over. 
+      -  **Scripts can be used** during failover to update application dependencies and bindings. 
+      -  This approach enables a **one-click failover** for multiple web applications on the web servers and eliminates the scope for confusion in the event of a disaster.
    -  ![](2019-11-20-21-53-28.png)
 - [Run a disaster recovery drill](https://docs.microsoft.com/en-au/learn/modules/protect-on-premises-infrastructure-with-azure-site-recovery/4-run-disaster-recovery-drill/)
   - Disaster recovery drill
     - With Azure Site Recovery, you can do a full disaster recovery test without affecting your existing live environment.
+    - Use an isolated network from the live environment to prevent any impact to production environments.
     - Monitor a test recovery
       - ![](2019-11-20-22-03-22.png)
       - Backup or Site Recovery
